// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defined type CREATE_SOURCE_SHOW 1`] = `
Object {
  "result": Object {
    "add": true,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "source": Object {},
    "stepOneValid": true,
    "stepTwoErrorMessages": Object {},
    "stepTwoValid": false,
  },
  "type": "CREATE_SOURCE_SHOW",
}
`;

exports[`defined type EDIT_SOURCE_SHOW 1`] = `
Object {
  "result": Object {
    "add": false,
    "edit": true,
    "editSource": Object {},
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "source": Object {},
    "stepOneValid": true,
    "stepTwoErrorMessages": Object {},
    "stepTwoValid": false,
  },
  "type": "EDIT_SOURCE_SHOW",
}
`;

exports[`defined type UPDATE_SOURCE_HIDE 1`] = `
Object {
  "result": Object {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "source": Object {},
    "stepOneValid": true,
    "stepTwoErrorMessages": Object {},
    "stepTwoValid": false,
  },
  "type": "UPDATE_SOURCE_HIDE",
}
`;

exports[`defined type VALID_SOURCE_WIZARD_STEPONE 1`] = `
Object {
  "result": Object {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "source": Object {},
    "stepOneValid": true,
    "stepTwoErrorMessages": Object {},
    "stepTwoValid": false,
  },
  "type": "VALID_SOURCE_WIZARD_STEPONE",
}
`;

exports[`defined type VALID_SOURCE_WIZARD_STEPTWO 1`] = `
Object {
  "result": Object {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "source": Object {},
    "stepOneValid": true,
    "stepTwoErrorMessages": Object {},
    "stepTwoValid": true,
  },
  "type": "VALID_SOURCE_WIZARD_STEPTWO",
}
`;

exports[`fulfilled types ADD_SOURCE 1`] = `
Object {
  "result": Object {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": true,
    "pending": false,
    "show": true,
    "source": Object {
      "test": "success",
    },
    "stepOneValid": true,
    "stepTwoErrorMessages": Object {},
    "stepTwoValid": false,
  },
  "type": "ADD_SOURCE_FULFILLED",
}
`;

exports[`fulfilled types GET_WIZARD_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "source": Object {},
    "stepOneValid": true,
    "stepTwoErrorMessages": Object {},
    "stepTwoValid": false,
  },
  "type": "GET_WIZARD_CREDENTIALS_FULFILLED",
}
`;

exports[`fulfilled types UPDATE_SOURCE 1`] = `
Object {
  "result": Object {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": true,
    "pending": false,
    "show": true,
    "source": Object {
      "test": "success",
    },
    "stepOneValid": true,
    "stepTwoErrorMessages": Object {},
    "stepTwoValid": false,
  },
  "type": "UPDATE_SOURCE_FULFILLED",
}
`;

exports[`rejected types ADD_SOURCE 1`] = `
Object {
  "result": Object {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": true,
    "errorMessage": "",
    "errorStatus": 0,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "source": Object {},
    "stepOneValid": true,
    "stepTwoErrorMessages": Object {},
    "stepTwoValid": false,
  },
  "type": "ADD_SOURCE_REJECTED",
}
`;

exports[`rejected types UPDATE_SOURCE 1`] = `
Object {
  "result": Object {
    "add": false,
    "edit": false,
    "editSource": null,
    "error": true,
    "errorMessage": "",
    "errorStatus": 0,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "source": Object {},
    "stepOneValid": true,
    "stepTwoErrorMessages": Object {},
    "stepTwoValid": false,
  },
  "type": "UPDATE_SOURCE_REJECTED",
}
`;
